slide/src/test/ui/error/expected_expr_found_eof.slide
===in
1 + 2 * 3 / 4 ^ 
===in

~~~stdout
~~~stdout

~~~stderr
error[P0002]: Expected an expression, found expression
  |
1 | 1 + 2 * 3 / 4 ^  
  |                 ^ expected an expression
  |
~~~stderr

~~~exitcode
1
~~~exitcode
